# buckup-cli

./: Cargo.toml  README.md  list-backups.sh
src/: args.rs  config.rs  lib.rs  main.rs  result.rs
src/args/: command.rs  mod.rs
src/args/config/: mod.rs  registry.rs
src/args/config/backups/: edit_backup.rs  mod.rs
src/config/: backups.rs  mod.rs  registry.rs
