[package]
name = "smartsync-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Uses `../core` for local development
# uses version `0.1.0` from crates.io when published
smartsync-core = { path = "../core", version = "0.1.0" }
clap = "2.33"
toml = "0.5"
